# AINewsBack

./: .env.example  Dockerfile  README.md  docker-compose.server.yml  pyproject.toml
ainewsback/: config.py  main.py
ainewsback/api/v1/: __init__.py  deps.py  router.py
ainewsback/api/v1/base/: __init__.py  root.py
ainewsback/api/v1/user/: __init__.py  login.py
ainewsback/core/: config.py  database.py  logger.py  reids.py
ainewsback/middleware/: __init__.py  auth_middleware.py  logging_middleware.py
ainewsback/models/: user.py
ainewsback/repositories/: base.py  user_repository.py
ainewsback/schemas/: base.py  user.py
ainewsback/services/: user_service.py  verification.py
ainewsback/utils/: code_generator.py  dingtalk_robot.py  jwt.py  password.py
script/: build_and_push.ps1  deploy_server.sh
tests/utils/: test_password_util.py
